<resources>
    <string name="app_name">eFood</string>
    <string name="desc_splash">Various dishes distributed on a table</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="or">Or</string>
    <string name="label_sign_up">Sign up</string>
    <string name="required">This field is required</string>
    <string name="label_name">Name</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Password</string>
    <string name="label_password_repeat">Confirm your password</string>
    <string name="login_success">You\'re now logged in</string>
    <string name="signup_sucess">You\'re now signed up. Welcome!</string>
    <string name="password_unmatched">Passwords don\'t match</string>
    <string name="dummy_restaurant_title">Tony Roma\'s</string>
    <string name="dummy_address">Av. Lavandisca, 717 - Indianópolis, São Paulo</string>
    <string name="dummy_closing_hours">Closes at 10 PM</string>
    <string name="content_restaurant_image">Restaurant media</string>
    <string name="main_dishes">Main dishes</string>
    <string name="dummy_dish_title">Ginger sauce salad</string>
    <string name="back">Back</string>
    <string name="dummy_dish_description">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
</resources>