<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/restaurants_item_image_view"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            tools:src="@drawable/ic_launcher_background"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/content_restaurant_image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/restaurants_item_image_view"
            app:layout_constraintStart_toStartOf="parent">
            <LinearLayout
                android:id="@+id/restaurants_item_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">
                <TextView
                    android:id="@+id/restaurants_item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/dummy_restaurant_title"
                    style="@style/TextAppearance.AppCompat.Title"/>
                <TextView
                    android:id="@+id/restaurants_item_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/dummy_address"/>
                <TextView
                    android:id="@+id/restaurants_item_closing_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/dummy_closing_hours"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>