<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DishesActivity">
    <ImageView
        android:id="@+id/dishes_image_view"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="centerCrop"
        tools:src="@drawable/tony_romas_shrimp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"   
        android:contentDescription="@string/content_restaurant_image"/>
    <TextView
        android:id="@+id/dishes_restaurant_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        tools:text="@string/dummy_restaurant_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/dishes_image_view"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Theme.EFood.FloatingActionButton"
        android:contentDescription="TODO" />
    <TextView
        android:id="@+id/dishes_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/main_dishes"
        style="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintTop_toBottomOf="@+id/dishes_image_view"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dishes_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/dishes_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>